--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,27 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:sat="http://schemas.android.com/apk/res-auto"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
-    <ListView
+    <RelativeLayout
+        android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/lv"></ListView>
-<!-- <com.example.chenyu.shaketofresh.android.view.ext.SatelliteMenu.android.view.ext.SatelliteMenu
-        android:id="@+id/menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|left"
-        android:layout_margin="8dp"
-        sat:satelliteDistance="170dp"
-        sat:mainImage="@drawable/ic_launcher"
-        sat:totalSpacingDegree="90"
-
-
-        sat:closeOnClick="true"
-        sat:expandDuration="500"/>-->
+        android:layout_height="match_parent"></RelativeLayout>
 </RelativeLayout>
