--- a/app/src/main/res/layout/slidingmenu.xml
+++ b/app/src/main/res/layout/slidingmenu.xml
@@ -48,4 +48,17 @@
         android:layout_height="1dp"
         android:background="#00B2EE"
         />
+    <TextView
+        android:id="@+id/menu_code"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:paddingTop="5dp"
+        android:text="我的二维码"
+        android:textColor="#ffffff"
+        android:textSize="18sp"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#00B2EE"
+        />
     </LinearLayout>
